--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
         "axios": "^1.6.4",
-        "bootstrap": "^5.2.3",
+        "bootstrap": "^5.3.3",
         "laravel-vite-plugin": "^1.0",
         "sass": "^1.56.1",
         "vite": "^5.0"
@@ -16,11 +16,10 @@
     "dependencies": {
         "@sweetalert2/theme-dark": "^5.0.16",
         "apexcharts": "^3.49.2",
-        "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
         "datatables.net": "^2.0.8",
         "datatables.net-bs5": "^2.0.8",
-        "datatables.net-buttons-dt": "^3.0.2",
+        "datatables.net-dt": "^2.0.8",
         "datatables.net-responsive": "^3.0.2",
         "datatables.net-responsive-bs5": "^3.0.2",
         "datatables.net-searchpanes": "^2.3.0",
